wp-content/themes/rr/style.css
/* ... */
#format.option-set {
  left: 68px;
}

#topic.option-set {
  left: 254px;
}

#region.option-set {
  left: 507px;
}

.cat-item.selected {
  background: #667280;
}

.cat-item.selected:hover {
  background: #667280;
}

.cat-item.selected a {
  color: #FFF;
}

.filter-wrap {
  width: 200px;
  float: left;
}

.topic-wrap {
  width: 244px;
}

#format.option-set {
  width: 110px;
}
#region.option-set {
  width: 110px;
}

.option-set li{
  padding:5px 0 0 15px;
  cursor: pointer;
  font-family: robotolight;
  font-weight: normal;
  font-size: 14px;
}

.option-set li a{
  color: #667280;
}

.option-set li:hover {
  background-color: #f1f3f5;
}

.option-set li:hover a {
  color: #990101;
}

.option-set li a:hover{
  color: #990101;
}



/**** Isotope Filtering ****/

.isotope-item {
  z-index: 2;
}

.isotope-hidden.isotope-item {
  pointer-events: none;
  z-index: 1;
}

/**** Isotope CSS3 transitions ****/

.isotope,
.isotope .isotope-item {
  -webkit-transition-duration: 0.8s;
     -moz-transition-duration: 0.8s;
      -ms-transition-duration: 0.8s;
       -o-transition-duration: 0.8s;
          transition-duration: 0.8s;
}

.isotope {
  -webkit-transition-property: height, width;
     -moz-transition-property: height, width;
      -ms-transition-property: height, width;
       -o-transition-property: height, width;
          transition-property: height, width;
}

.isotope .isotope-item {
  -webkit-transition-property: -webkit-transform, opacity;
     -moz-transition-property:    -moz-transform, opacity;
      -ms-transition-property:     -ms-transform, opacity;
       -o-transition-property:      -o-transform, opacity;
          transition-property:         transform, opacity;
}

/**** disabling Isotope CSS3 transitions ****/

.isotope.no-transition,
.isotope.no-transition .isotope-item,
.isotope .isotope-item.no-transition {
  -webkit-transition-duration: 0s;
     -moz-transition-duration: 0s;
      -ms-transition-duration: 0s;
       -o-transition-duration: 0s;
          transition-duration: 0s;
}

/* BEGIN MEDIA QUERIES */

@media only screen and (max-width:1250px) {

  .slider.with-excerpt h1 {
    font-size: 5.5em;
  }

  .long.with-excerpt h1 {
    font-size: 4.5em;
  }

  .slider p {
    font-size: 2.5em;
  }

}

@media only screen and (max-width:960px) {
  .custom-fancybox-wrapper ul {
    text-align: center;
  }
  .custom-fancybox-wrapper ul li {
    display: inline-table;
    float: none;
    margin: 30px 20px 0 20px;
    text-align: left;
  }
  .custom-fancybox-wrapper ul li.last {
    display: inline-table;
    float: none;
    margin: 30px 20px 0 20px !important;
  }
}

@media only screen and (max-width:930px) {
  
  .slider.with-excerpt {
    display: table; 
  }
  
  .slider.with-excerpt .slider-content {
    display: table-cell;
    vertical-align: middle;
    position: relative;
    padding: 0px;
  }
  
  .slider .slider-content .inner-content {
    display: table;
    width: 100%;
    margin: 0 auto;
  }
  
  .slider.with-excerpt .slider-content .inner-content {
    width: 70%;
  } 
  
  .slider.long .slider-content .inner-content {
     width: 70%;
   }
  
    
  .slider.with-excerpt h1 {
    font-size: 5em;
    line-height: 1.5em;
    position: relative;
    vertical-align: top;
    margin: 0px;
    padding: 0px;
    width: 100%;
    text-align: center;
    display:table-row;
  }

  .slider p {
    color: #ffffff;
    font-size: 2.3em;
    position: relative;
    padding: 0px;
    margin-top: 0px;
    width: 100%;
    text-align: center;
    display:table-row;
    
  }

  .long p {
    font-size: 2em;
  }
  
  .section_items li div {
    width: 100%;
  }
  
  .section_items li div > h4 {
    text-align: center;
  }
  
  .section_items li img {
    margin-right: auto;
    margin-left: auto;
    display: block;
    padding: 0;
  }
  
  .category .slider h1.entry-title {
    font-size: 4.9em;
  }
}

@media only screen and (max-width:900px) {
  .cloud-platform .columns3{
    float: none;
    width: 100%;
    margin-left: auto !important;
    margin-right: auto !important;
    text-align: center;
  }

}

@media only screen and (max-width:900px) {
  .columns3{
    float: left;
    width: 100%;
    margin: 0 !important;
  }

}

@media only screen and (max-width:650px) {

   .slider.with-excerpt  h1{
     font-size: 4.0em;
     line-height: 1.3em; 
   }

   .slider.long h1 {
     font-size: 4.7em;
   }
   
   .slider p {
     font-size: 1.8em;
   }
   
   .archive .slider h1.entry-title {
      font-size: 5.0em;
    }
    
   .category .slider h1.entry-title {
     font-size: 3.0em;
   }
   
   /*Responsive for dropdown filtering on insights page*/

  .filter-options span {
    float: none !important;
  }
  
  .filter-options {
    width: 170px !important;
  }
  
  .selector-box {
    margin-bottom: 15px !important;
  }
  
  #format.option-set {
    left: 0px;
    top: 51px;
  }

  #topic.option-set {
    left: 0px;
    top: 115px;
  }

  #region.option-set {
    left: 0px;
    top: 179px;
  }
 
}



@media only screen and (max-width:400px) {
   section[role="about"] p,
   section[role="about-us"] p {
     font-size: 18px;
   }
   .slider h1.entry-title {
     font-size: 4em;
   }
   
   .slider.long h1 {
     font-size: 4em;
   }
   .slider.with-excerpt h1 {
    /* line-height: 1.1em; */
   }

   .slider p {
     font-size: 1.8em;
   }

}

@media only screen and (max-width:320px) {
  section[role="about"] h3, section[role="about-us"] h3 {
    font-size: 38px;
  }
  
  .slider.long h1 {
    font-size: 3.2em;
  }
  .slider.long p {
    font-size: 1.6em;
  }
}

/* END MEDIA QUERIES */
/* NOTHING BELOW THIS LINE!!! */

